--- a/arch/arm/boot/dts/armstonea9qdl.dtsi
+++ b/arch/arm/boot/dts/armstonea9qdl.dtsi
@@ -608,19 +608,46 @@
  * restriction to 24.576 MHz on Dual/Quad. See netdcua9qdl.dtsi/efusa9qdl.dtsi.
  */
 &clks {
-	assigned-clocks = <&clks IMX6QDL_CLK_PLL4_AUDIO_DIV>,
+	assigned-clocks =
+#ifdef CONFIG_ARMSTONEA9_LVDS0_CLK
+			  <&clks IMX6QDL_CLK_LDB_DI0_SEL>,
+#endif
+#ifdef CONFIG_ARMSTONEA9_LVDS1_CLK
+			  <&clks IMX6QDL_CLK_LDB_DI1_SEL>,
+#endif
+			  <&clks IMX6QDL_CLK_PLL4_AUDIO_DIV>,
 			  <&clks IMX6QDL_CLK_SSI1_SEL>,
 			  <&clks IMX6QDL_CLK_SSI1>,
-			  <&clks IMX6QDL_CLK_CKO2_SEL>,
-			  <&clks IMX6QDL_CLK_CKO>;
+			  <&clks IMX6QDL_CLK_CKO>,
+			  <&clks IMX6QDL_CLK_CKO2_SEL>;
 
-	assigned-clock-parents = <0>,
+	assigned-clock-parents =
+#ifdef CONFIG_ARMSTONEA9_LVDS0_CLK
+				 <&clks CONFIG_ARMSTONEA9_LVDS0_CLK>,
+#endif
+#ifdef CONFIG_ARMSTONEA9_LVDS1_CLK
+				 <&clks CONFIG_ARMSTONEA9_LVDS1_CLK>,
+#endif
+				 <0>,
 				 <&clks IMX6QDL_CLK_PLL4_AUDIO_DIV>,
 				 <0>,
 				 <&clks IMX6QDL_CLK_SSI1>,
 				 <&clks IMX6QDL_CLK_CKO2>;
-//###	assigned-clock-rates = <786432000>, <0>, <24576000>;
-	assigned-clock-rates = <786432000>, <0>, <12288000>;
+
+	assigned-clock-rates =
+#ifdef CONFIG_ARMSTONEA9_LVDS0_CLK
+				<0>,
+#endif
+#ifdef CONFIG_ARMSTONEA9_LVDS1_CLK
+				<0>,
+#endif
+				<786432000>,
+#ifdef CONFIG_ARMSTONEA9_AUDIO_12M288
+				<12288000>,	/* Audio with 12.288 MHz */
+#else
+				<24576000>,	/* Audio with 24.576 MHz */
+#endif
+				<0>;
 };
 #endif
 
