--- a/arch/arm/boot/dts/picomoda9qdl.dtsi
+++ b/arch/arm/boot/dts/picomoda9qdl.dtsi
@@ -705,12 +705,20 @@
 };
 
 &clks {
-	assigned-clocks = <&clks IMX6QDL_CLK_PLL4_AUDIO_DIV>,
+	assigned-clocks =
+#ifdef CONFIG_PICOMODA9_LVDS0_CLK
+			  <&clks IMX6QDL_CLK_LDB_DI0_SEL>,
+#endif
+			  <&clks IMX6QDL_CLK_PLL4_AUDIO_DIV>,
 			  <&clks IMX6QDL_CLK_CKO1_SEL>,
 			  <&clks IMX6QDL_CLK_CKO1_PODF>,
 			  <&clks IMX6QDL_CLK_CKO>;
 
-	assigned-clock-parents = <0>,
+	assigned-clock-parents =
+#ifdef CONFIG_PICOMODA9_LVDS0_CLK
+				 <&clks CONFIG_PICOMODA9_LVDS0_CLK>,
+#endif
+			         <0>,
 				 <&clks IMX6QDL_CLK_PLL4_AUDIO_DIV>,
 				 <0>,
 				 <&clks IMX6QDL_CLK_CKO1>;
@@ -723,11 +731,21 @@
 	 * commonly used bit rates.
 	 *
 	 * Remark: Solo and DualLite have an additional divider that also can
-	 * divide by 1, 2 and 4. So here we could go down to 12.288 MHz, but
-	 * better keep the code common for all boards.
+	 * divide by 1, 2 and 4. So here we can go down to 12.288 MHz.
 	 */
-	//assigned-clock-rates = <98304000>, <98304000>, <12288000>;
-	assigned-clock-rates = <196608000>, <196608000>, <24576000>;
+	assigned-clock-rates =
+#ifdef CONFIG_PICOMODA9_LVDS0_CLK
+				<0>,
+#endif
+#ifdef CONFIG_PICOMODA9_AUDIO_12M288
+				<98304000>,	/* Audio with 12.288 MHz */
+				<98304000>,
+				<12288000>;
+#else
+				<196608000>,	/* Audio with 24.576 MHz */
+				<196608000>,
+				<24576000>;
+#endif
 };
 
 #ifdef CONFIG_PICOMODA9_SPI_A
