Add support for mipi display TM050JDHG33
- Add driver files
- Display runs in 2-lane mode so the refresh rate is limited to 50 HZ
- Backlight control is not implemented yet

--- a/drivers/video/fbdev/mxc/Kconfig
+++ b/drivers/video/fbdev/mxc/Kconfig
@@ -71,6 +71,11 @@ config FB_MXC_YES_OPTOELECTRONICS_PANEL_YTC310KLAA
 	depends on FB_MXC_DISP_FRAMEWORK || FB_MXC_SYNC_PANEL
 	depends on FB_MXC_MIPI_DSI_SAMSUNG || FB_MXC_MIPI_DSI_NORTHWEST
 
+config FB_MXC_TIANMA_PANEL_TM050JDHG33
+	tristate "Tianma Panel TM050JDHG33"
+	depends on FB_MXC_DISP_FRAMEWORK || FB_MXC_SYNC_PANEL
+	depends on FB_MXC_MIPI_DSI_NORTHWEST
+
 config FB_MXC_BT656
 	tristate "MXC BT656 and BT1120 output"
 	depends on FB_MXC_SYNC_PANEL
