Improve picocormx7ulp lpi2c5 node
The clock frequency of the lpi2c5 node was not set. So add flag to setup
clock-frequency of lpi2c5 node.

--- a/arch/arm/boot/dts/picocoremx7ulp.dts
+++ b/arch/arm/boot/dts/picocoremx7ulp.dts
@@ -395,6 +395,7 @@
 	pinctrl-names = "default", "sleep";
 	pinctrl-0 = <&pinctrl_lpi2c5>;
 	pinctrl-1 = <&pinctrl_lpi2c5>;
+	clock-frequency = <100000>;
 	status = "okay";
 };
 #endif
