--- a/arch/arm64/boot/dts/F+S/picocoremx8mm-lcdif-g050tan01.dts
+++ b/arch/arm64/boot/dts/F+S/picocoremx8mm-lcdif-g050tan01.dts
@@ -12,7 +12,7 @@
  * GNU General Public License for more details.
  */
 
-#include "picocoremx8mm.dts"
+#include "picocoremx8mm-bbdsi.dts"
 
 
 &mipi_dsi {
