--- a/arch/arm/boot/dts/vfxxx.dtsi
+++ b/arch/arm/boot/dts/vfxxx.dtsi
@@ -219,10 +219,11 @@
 				compatible = "fsl,vf610-sai";
 				reg = <0x4002f000 0x1000>;
 				interrupts = <84 IRQ_TYPE_LEVEL_HIGH>;
-				clocks = <&clks VF610_CLK_SAI0>,
+				clocks = <&clks VF610_CLK_SAI0>, <&clks 0>,
 					<&clks VF610_CLK_SAI0_DIV>,
 					<&clks 0>, <&clks 0>;
-				clock-names = "bus", "mclk1", "mclk2", "mclk3";
+				clock-names = "bus", "mclk0", "mclk1",
+					"mclk2", "mclk3";
 				dma-names = "tx", "rx";
 				dmas = <&edma0 0 17>,
 					<&edma0 0 16>;
@@ -233,10 +234,11 @@
 				compatible = "fsl,vf610-sai";
 				reg = <0x40030000 0x1000>;
 				interrupts = <85 IRQ_TYPE_LEVEL_HIGH>;
-				clocks = <&clks VF610_CLK_SAI1>,
+				clocks = <&clks VF610_CLK_SAI1>, <&clks 0>,
 					<&clks VF610_CLK_SAI1_DIV>,
 					<&clks 0>, <&clks 0>;
-				clock-names = "bus", "mclk1", "mclk2", "mclk3";
+				clock-names = "bus", "mclk0", "mclk1",
+					"mclk2", "mclk3";
 				dma-names = "tx", "rx";
 				dmas = <&edma0 0 19>,
 					<&edma0 0 18>;
@@ -247,10 +249,11 @@
 				compatible = "fsl,vf610-sai";
 				reg = <0x40031000 0x1000>;
 				interrupts = <86 IRQ_TYPE_LEVEL_HIGH>;
-				clocks = <&clks VF610_CLK_SAI2>,
+				clocks = <&clks VF610_CLK_SAI2>, <&clks 0>,
 					<&clks VF610_CLK_SAI2_DIV>,
 					<&clks 0>, <&clks 0>;
-				clock-names = "bus", "mclk1", "mclk2", "mclk3";
+				clock-names = "bus", "mclk0", "mclk1",
+					"mclk2", "mclk3";
 				dma-names = "tx", "rx";
 				dmas = <&edma0 0 21>,
 					<&edma0 0 20>;
@@ -261,10 +264,11 @@
 				compatible = "fsl,vf610-sai";
 				reg = <0x40032000 0x1000>;
 				interrupts = <87 IRQ_TYPE_LEVEL_HIGH>;
-				clocks = <&clks VF610_CLK_SAI3>,
+				clocks = <&clks VF610_CLK_SAI3>, <&clks 0>,
 					<&clks VF610_CLK_SAI3_DIV>,
 					<&clks 0>, <&clks 0>;
-				clock-names = "bus", "mclk1", "mclk2", "mclk3";
+				clock-names = "bus", "mclk0", "mclk1",
+					"mclk2", "mclk3";
 				dma-names = "tx", "rx";
 				dmas = <&edma0 1 9>,
 					<&edma0 1 8>;
