Add F&S NAND driver vf610_nfc_fus
F&S has an own NAND driver for the NFC (NAND Flash Controller) on the
Vybrid CPU. Add this driver and use it on F&S boards.

- Add the files drivers/mtd/nand/vf610_nfc_fus.c and
  include/linux/platform_data/vf610_nfc_fus.h with the driver code
- Add CONFIG_MTD_NAND_VF610_NFC_FUS to drivers/mtd/nand/Kconfig and
  an entry to drivers/mtd/nand/Makefile
- Enable CONFIG_MTD_NAND_VF610_NFC_FUS in fsvybrid_defconfig
- Add node to armstonea5.dts

While we are at it, fix MODULE_AUTHOR and MODULE_DESCRIPTION for the
F&S version of the GPMI NAND driver, too.

--- a/arch/arm/boot/dts/armstonea5.dts
+++ b/arch/arm/boot/dts/armstonea5.dts
@@ -258,7 +258,7 @@ lvds_wvga {				\
 	bdinfo: bdinfo {
 		compatible = "bdinfo";
 		board_name = "armstonea5";
-		ecc_strength = "8";
+		ecc_mode = "5";
 	};
 
 #ifdef CONFIG_ARMSTONEA5_SGTL5000_AUDIO
@@ -306,6 +306,11 @@ lvds_wvga {				\
 			<&clks VF610_CLK_SAI2>;
 #endif
 	assigned-clock-rates = <0>, <786432000>;//, <12288000>, <0>;
+
+&nfc {
+	compatible = "fus,vf610-nfc";
+	fus,ecc-mode = <5>;
+	status = "okay";
 };
 
 &can0 {
