--- a/arch/arm/configs/fsvybrid_defconfig
+++ b/arch/arm/configs/fsvybrid_defconfig
@@ -215,6 +215,7 @@ CONFIG_MTD_DATAFLASH=y
 CONFIG_MTD_M25P80=y
 CONFIG_MTD_SST25L=y
 CONFIG_MTD_NAND=y
+CONFIG_MTD_NAND_VF610_NFC_FUS=y
 CONFIG_MTD_SPI_NOR=y
 # CONFIG_MTD_SPI_NOR_USE_4K_SECTORS is not set
 CONFIG_MTD_UBI=y
