Fix USB device port settings on fsvybrid
On Vybrid, we need to activate usbmisc0 and usbphy0 in the device tree
to be able to use the USB device port, for example for a mass storage
gadget.

--- a/arch/arm/boot/dts/armstonea5.dts
+++ b/arch/arm/boot/dts/armstonea5.dts
@@ -645,6 +645,14 @@ lvds_wvga {				\
 	status = "okay";
 };
 
+&usbmisc0 {
+	status = "okay";
+};
+
+&usbphy0 {
+	status = "okay";
+};
+
 &usbh1 {
 	status = "okay";
 };
