--- a/arch/arm/boot/dts/cubea5.dts
+++ b/arch/arm/boot/dts/cubea5.dts
@@ -310,6 +310,14 @@
 	status = "okay";
 };
 
+&usbmisc0 {
+	status = "okay";
+};
+
+&usbphy0 {
+	status = "okay";
+};
+
 &usbh1 {
 	status = "okay";
 };
