--- a/arch/arm/boot/dts/efusa9qdl.dtsi
+++ b/arch/arm/boot/dts/efusa9qdl.dtsi
@@ -515,7 +515,7 @@
 		brightness-levels = <0 1 5 10 18 28 41 56
 				     73 92 113 137 163 192 222 255>;
 		default-brightness-level = <14>;
-		fb-names = "mxs-lcdif1";
+		fb-names = "lcd";
 	};
 
 	/* LVDS backlight PWM on backlight connector */
@@ -532,7 +532,7 @@
 				     73 92 113 137 163 192 222 255>;
 #endif
 		default-brightness-level = <14>;
-		fb-names = "mxs-lcdif2";
+		fb-names = "ldb0", "ldb1";
 	};
 
 #ifdef CONFIG_EFUSA9_CAMERA
