--- a/arch/arm/boot/dts/qblissa9qdl.dtsi
+++ b/arch/arm/boot/dts/qblissa9qdl.dtsi
@@ -385,7 +385,7 @@
 				     73 92 113 137 163 192 222 255>;
 #endif
 		default-brightness-level = <14>;
-		fb-names = "mxs-lcdif1";
+		fb-names = "ldb0", "ldb1";
 	};
 
 #ifdef CONFIG_QBLISSA9_PARALLEL_CAMERA
