--- a/arch/arm/boot/dts/qblissa9r2qdl.dtsi
+++ b/arch/arm/boot/dts/qblissa9r2qdl.dtsi
@@ -419,7 +419,7 @@
 				     73 92 113 137 163 192 222 255>;
 #endif
 		default-brightness-level = <14>;
-		fb-names = "mxs-lcdif1";
+		fb-names = "ldb0", "ldb1";
 	};
 #endif
 
