--- a/arch/arm/boot/dts/Makefile
+++ b/arch/arm/boot/dts/Makefile
@@ -486,6 +486,7 @@ dtb-$(CONFIG_SOC_IMX6SX) += \
 	picocoremx6sx.dtb \
 	bema9x.dtb \
 	picocoma9x.dtb \
+	cont1.dtb \
 	imx6sx-sdb-ldo.dtb	\
 	imx6sx-sdb-m4.dtb \
 	imx6sx-sdb-mqs.dtb \
