Add cont1.dtb to arch/arm/boot/dts/Makefile
The cont1 device-tree is not available in the Makefile. So DT is not
built by default in fsimx6sx_defconfig. Add it to Makefile

--- a/arch/arm/boot/dts/Makefile
+++ b/arch/arm/boot/dts/Makefile
@@ -487,6 +487,7 @@ dtb-$(CONFIG_SOC_IMX6SX) += \
 	vc600.dtb \
 	bema9x.dtb \
 	picocoma9x.dtb \
+	cont1.dtb \
 	imx6sx-sdb-ldo.dtb	\
 	imx6sx-sdb-m4.dtb \
 	imx6sx-sdb-mqs.dtb \
