--- a/arch/arm/boot/dts/picomoda9qdl.dtsi
+++ b/arch/arm/boot/dts/picomoda9qdl.dtsi
@@ -631,7 +631,7 @@
 				     73 92 113 137 163 192 222 255>;
 #endif
 		default-brightness-level = <14>;
-		fb-names = "lcd", "lvds0";
+		fb-names = "lcd", "ldb0";
 	};
 
 #ifdef CONFIG_PICOMODA9_PARALLEL_CAMERA
