--- a/arch/arm/boot/dts/armstonea9r2q.dts
+++ b/arch/arm/boot/dts/armstonea9r2q.dts
@@ -9,7 +9,7 @@
 /dts-v1/;
 
 /* Set board revision as 3-digit number, e.g. 110 for board rev. 1.10 */
-#define CONFIG_ARMSTONEA9R2_BOARD_REVISION	100
+#define CONFIG_ARMSTONEA9R2_BOARD_REVISION	120
 
 #define DISPLAY_NONE	0	/* No display on this port */
 #define DISPLAY_HDMI	1	/* DVI/HDMI via HDMI connector */
@@ -239,6 +239,8 @@ wvga {					\
 #define CONFIG_ARMSTONEA9R2_I2C_A
 #define CONFIG_ARMSTONEA9R2_I2C_B
 #define CONFIG_ARMSTONEA9R2_I2C_C
+/* only available in revison >= 1.20 and if SPI_B is not activated */
+//#define CONFIG_ARMSTONEA9R2_I2C_D
 
 /* SPI */
 #define CONFIG_ARMSTONEA9R2_SPI_A
@@ -257,6 +259,11 @@ wvga {					\
 #define CONFIG_ARMSTONEA9R2_UART_D
 #define CONFIG_ARMSTONEA9R2_UART_D_RTSCTS
 #define CONFIG_ARMSTONEA9R2_UART_E
+
+/* If board revision is less than 1.20, or if SPI_B is activated, I2C_D is not available */
+#if (CONFIG_ARMSTONEA9R2_BOARD_REVISION < 120) || defined(CONFIG_ARMSTONEA9R2_SPI_B)
+#undef CONFIG_ARMSTONEA9R2_I2C_D
+#endif
 
 #include "imx6q.dtsi"
 #include "armstonea9r2qdl.dtsi"
