Fix  wrong framebuffer name in devicetree for picocoremx6ul & efusa7ull
The fb-names entry of the backlight node was wrong and the display
backlight did not get enabled, because fsimx6ul supports one lcd and so
the numeration of the mxs-lcdif is different to the other boards

--- a/arch/arm/boot/dts/efusa7ul.dts
+++ b/arch/arm/boot/dts/efusa7ul.dts
@@ -187,7 +187,7 @@ wvga {					\
 		brightness-levels = <0 1 5 10 18 28 41 56
 				     73 92 113 137 163 192 222 255>;
 		default-brightness-level = <14>;
-		fb-names = "mxs-lcdif0";
+		fb-names = "mxs-lcdif";
 	};
 
 	backlight {
@@ -197,7 +197,7 @@ wvga {					\
 				     73 92 113 137 163 192 222 255>;
 		default-brightness-level = <14>;
 		power-supply = <&reg_backlight>;
-		fb-names = "mxs-lcdif0";
+		fb-names = "mxs-lcdif";
 	};
 
 	pxp_v4l2 {
